gen/TypeScriptParser.java
// Generated from E:/Com/Test_2/Test_2/src/antlr/TypeScriptParser.g4 by ANTLR 4.13.2
package gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class TypeScriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ELSE=1, IMPORT=2, FROM=3, EXPORT=4, CLASS=5, IF=6, ENUM=7, AS=8, FUNCTION=9, 
		TUPLE=10, BOOLEAN=11, NULL=12, THIS=13, NOT=14, LET=15, RETURN=16, TYPE=17, 
		ARRAY_TYPE=18, ARRAY_TYPE_BRACKETS=19, OPERATION=20, COMPARISON_OPERATOR=21, 
		LOGICAL_OPERATOR=22, IDENTIFIER=23, STRING=24, NUMBER=25, LCURLY=26, RCURLY=27, 
		LPAREN=28, RPAREN=29, LBRACK=30, RBRACK=31, COLON=32, SEMICOLON=33, COMMA=34, 
		ARROW=35, BACKTICK=36, SDOLER=37, QUESTION_MARK=38, SPREAD=39, OR=40, 
		EQ=41, DOT=42, WS=43, LINE_COMMENT=44, BLOCK_COMMENT=45;
	public static final int
		RULE_program = 0, RULE_ts_classDeclaration = 1, RULE_ts_classBody = 2, 
		RULE_ts_classBodyMember = 3, RULE_ts_enumDeclaration = 4, RULE_ts_enumMember = 5, 
		RULE_ts_classMember = 6, RULE_ts_variableDeclaration = 7, RULE_ts_array = 8, 
		RULE_ts_methodDeclaration = 9, RULE_ts_methodBody = 10, RULE_ts_parameterList = 11, 
		RULE_ts_parameter = 12, RULE_ts_typeWithBrackets = 13, RULE_ts_objectType = 14, 
		RULE_ts_objectTypeProperty = 15, RULE_ts_enumType = 16, RULE_ts_tupleType = 17, 
		RULE_ts_value = 18, RULE_ts_arrowFunctionDeclaration = 19, RULE_ts_templateString = 20, 
		RULE_ts_templateExpression = 21, RULE_ts_tupleValue = 22, RULE_ts_object = 23, 
		RULE_ts_objectProperty = 24, RULE_ts_statement = 25, RULE_ts_returnStatement = 26, 
		RULE_ts_methodInvocation = 27, RULE_ts_argumentList = 28, RULE_ts_negation = 29, 
		RULE_ts_ifStatement = 30, RULE_ts_ex = 31, RULE_ts_expression = 32, RULE_ts_p1 = 33, 
		RULE_ts_assignment = 34, RULE_ts_parenthesizedValue = 35;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "ts_classDeclaration", "ts_classBody", "ts_classBodyMember", 
			"ts_enumDeclaration", "ts_enumMember", "ts_classMember", "ts_variableDeclaration", 
			"ts_array", "ts_methodDeclaration", "ts_methodBody", "ts_parameterList", 
			"ts_parameter", "ts_typeWithBrackets", "ts_objectType", "ts_objectTypeProperty", 
			"ts_enumType", "ts_tupleType", "ts_value", "ts_arrowFunctionDeclaration", 
			"ts_templateString", "ts_templateExpression", "ts_tupleValue", "ts_object", 
			"ts_objectProperty", "ts_statement", "ts_returnStatement", "ts_methodInvocation", 
			"ts_argumentList", "ts_negation", "ts_ifStatement", "ts_ex", "ts_expression", 
			"ts_p1", "ts_assignment", "ts_parenthesizedValue"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'else'", "'import'", "'from'", "'export'", "'class'", "'if'", 
			"'enum'", "'as'", "'function'", "'tuple'", null, "'null'", "'this'", 
			"'!'", "'let'", "'return'", null, "'Array'", null, null, null, null, 
			null, null, null, "'{'", "'}'", "'('", "')'", "'['", "']'", "':'", "';'", 
			"','", "'=>'", "'`'", "'$'", "'?'", "'...'", "'|'", "'='", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ELSE", "IMPORT", "FROM", "EXPORT", "CLASS", "IF", "ENUM", "AS", 
			"FUNCTION", "TUPLE", "BOOLEAN", "NULL", "THIS", "NOT", "LET", "RETURN", 
			"TYPE", "ARRAY_TYPE", "ARRAY_TYPE_BRACKETS", "OPERATION", "COMPARISON_OPERATOR", 
			"LOGICAL_OPERATOR", "IDENTIFIER", "STRING", "NUMBER", "LCURLY", "RCURLY", 
			"LPAREN", "RPAREN", "LBRACK", "RBRACK", "COLON", "SEMICOLON", "COMMA", 
			"ARROW", "BACKTICK", "SDOLER", "QUESTION_MARK", "SPREAD", "OR", "EQ", 
			"DOT", "WS", "LINE_COMMENT", "BLOCK_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TypeScriptParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TypeScriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<Ts_classDeclarationContext> ts_classDeclaration() {
			return getRuleContexts(Ts_classDeclarationContext.class);
		}
		public Ts_classDeclarationContext ts_classDeclaration(int i) {
			return getRuleContext(Ts_classDeclarationContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScriptParserListener ) ((TypeScriptParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScriptParserListener ) ((TypeScriptParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeScriptParserVisitor ) return ((TypeScriptParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(72);
				ts_classDeclaration();
				}
				}
				setState(75); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==EXPORT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Ts_classDeclarationContext extends ParserRuleContext {
		public TerminalNode EXPORT() { return getToken(TypeScriptParser.EXPORT, 0); }
		public TerminalNode CLASS() { return getToken(TypeScriptParser.CLASS, 0); }
		public TerminalNode IDENTIFIER() { return getToken(TypeScriptParser.IDENTIFIER, 0); }
		public TerminalNode LCURLY() { return getToken(TypeScriptParser.LCURLY, 0); }
		public Ts_classBodyContext ts_classBody() {
			return getRuleContext(Ts_classBodyContext.class,0);
		}
		public TerminalNode RCURLY() { return getToken(TypeScriptParser.RCURLY, 0); }
		public Ts_classDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ts_classDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScriptParserListener ) ((TypeScriptParserListener)listener).enterTs_classDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScriptParserListener ) ((TypeScriptParserListener)listener).exitTs_classDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeScriptParserVisitor ) return ((TypeScriptParserVisitor<? extends T>)visitor).visitTs_classDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Ts_classDeclarationContext ts_classDeclaration() throws RecognitionException {
		Ts_classDeclarationContext _localctx = new Ts_classDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_ts_classDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(EXPORT);
			setState(78);
			match(CLASS);
			setState(79);
			match(IDENTIFIER);
			setState(80);
			match(LCURLY);
			setState(81);
			ts_classBody();
			setState(82);
			match(RCURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Ts_classBodyContext extends ParserRuleContext {
		public List<Ts_classBodyMemberContext> ts_classBodyMember() {
			return getRuleContexts(Ts_classBodyMemberContext.class);
		}
		public Ts_classBodyMemberContext ts_classBodyMember(int i) {
			return getRuleContext(Ts_classBodyMemberContext.class,i);
		}
		public Ts_classBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ts_classBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScriptParserListener ) ((TypeScriptParserListener)listener).enterTs_classBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScriptParserListener ) ((TypeScriptParserListener)listener).exitTs_classBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeScriptParserVisitor ) return ((TypeScriptParserVisitor<? extends T>)visitor).visitTs_classBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Ts_classBodyContext ts_classBody() throws RecognitionException {
		Ts_classBodyContext _localctx = new Ts_classBodyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_ts_classBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8421504L) != 0)) {
				{
				{
				setState(84);
				ts_classBodyMember();
				}
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Ts_classBodyMemberContext extends ParserRuleContext {
		public Ts_enumDeclarationContext ts_enumDeclaration() {
			return getRuleContext(Ts_enumDeclarationContext.class,0);
		}
		public Ts_classMemberContext ts_classMember() {
			return getRuleContext(Ts_classMemberContext.class,0);
		}
		public Ts_classBodyMemberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ts_classBodyMember; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScriptParserListener ) ((TypeScriptParserListener)listener).enterTs_classBodyMember(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScriptParserListener ) ((TypeScriptParserListener)listener).exitTs_classBodyMember(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeScriptParserVisitor ) return ((TypeScriptParserVisitor<? extends T>)visitor).visitTs_classBodyMember(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Ts_classBodyMemberContext ts_classBodyMember() throws RecognitionException {
		Ts_classBodyMemberContext _localctx = new Ts_classBodyMemberContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ts_classBodyMember);
		try {
			setState(92);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ENUM:
				enterOuterAlt(_localctx, 1);
				{
				setState(90);
				ts_enumDeclaration();
				}
				break;
			case LET:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 2);
				{
				setState(91);
				ts_classMember();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Ts_enumDeclarationContext extends ParserRuleContext {
		public TerminalNode ENUM() { return getToken(TypeScriptParser.ENUM, 0); }
		public TerminalNode IDENTIFIER() { return getToken(TypeScriptParser.IDENTIFIER, 0); }
		public TerminalNode LCURLY() { return getToken(TypeScriptParser.LCURLY, 0); }
		public List<Ts_enumMemberContext> ts_enumMember() {
			return getRuleContexts(Ts_enumMemberContext.class);
		}
		public Ts_enumMemberContext ts_enumMember(int i) {
			return getRuleContext(Ts_enumMemberContext.class,i);
		}
		public TerminalNode RCURLY() { return getToken(TypeScriptParser.RCURLY, 0); }
		public List<TerminalNode> COMMA() { return getTokens(TypeScriptParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(TypeScriptParser.COMMA, i);
		}
		public Ts_enumDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ts_enumDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScriptParserListener ) ((TypeScriptParserListener)listener).enterTs_enumDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScriptParserListener ) ((TypeScriptParserListener)listener).exitTs_enumDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeScriptParserVisitor ) return ((TypeScriptParserVisitor<? extends T>)visitor).visitTs_enumDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Ts_enumDeclarationContext ts_enumDeclaration() throws RecognitionException {
		Ts_enumDeclarationContext _localctx = new Ts_enumDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ts_enumDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(ENUM);
			setState(95);
			match(IDENTIFIER);
			setState(96);
			match(LCURLY);
			setState(97);
			ts_enumMember();
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(98);
				match(COMMA);
				setState(99);
				ts_enumMember();
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(105);
			match(RCURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Ts_enumMemberContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(TypeScriptParser.IDENTIFIER, 0); }
		public Ts_enumMemberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ts_enumMember; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScriptParserListener ) ((TypeScriptParserListener)listener).enterTs_enumMember(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScriptParserListener ) ((TypeScriptParserListener)listener).exitTs_enumMember(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeScriptParserVisitor ) return ((TypeScriptParserVisitor<? extends T>)visitor).visitTs_enumMember(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Ts_enumMemberContext ts_enumMember() throws RecognitionException {
		Ts_enumMemberContext _localctx = new Ts_enumMemberContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ts_enumMember);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Ts_classMemberContext extends ParserRuleContext {
		public Ts_variableDeclarationContext ts_variableDeclaration() {
			return getRuleContext(Ts_variableDeclarationContext.class,0);
		}
		public Ts_methodDeclarationContext ts_methodDeclaration() {
			return getRuleContext(Ts_methodDeclarationContext.class,0);
		}
		public Ts_arrowFunctionDeclarationContext ts_arrowFunctionDeclaration() {
			return getRuleContext(Ts_arrowFunctionDeclarationContext.class,0);
		}
		public Ts_classMemberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ts_classMember; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScriptParserListener ) ((TypeScriptParserListener)listener).enterTs_classMember(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScriptParserListener ) ((TypeScriptParserListener)listener).exitTs_classMember(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeScriptParserVisitor ) return ((TypeScriptParserVisitor<? extends T>)visitor).visitTs_classMember(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Ts_classMemberContext ts_classMember() throws RecognitionException {
		Ts_classMemberContext _localctx = new Ts_classMemberContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ts_classMember);
		try {
			setState(112);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(109);
				ts_variableDeclaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(110);
				ts_methodDeclaration();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(111);
				ts_arrowFunctionDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Ts_variableDeclarationContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(TypeScriptParser.IDENTIFIER, 0); }
		public TerminalNode EQ() { return getToken(TypeScriptParser.EQ, 0); }
		public Ts_valueContext ts_value() {
			return getRuleContext(Ts_valueContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(TypeScriptParser.SEMICOLON, 0); }
		public TerminalNode LET() { return getToken(TypeScriptParser.LET, 0); }
		public TerminalNode COLON() { return getToken(TypeScriptParser.COLON, 0); }
		public Ts_typeWithBracketsContext ts_typeWithBrackets() {
			return getRuleContext(Ts_typeWithBracketsContext.class,0);
		}
		public Ts_variableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ts_variableDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScriptParserListener ) ((TypeScriptParserListener)listener).enterTs_variableDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScriptParserListener ) ((TypeScriptParserListener)listener).exitTs_variableDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeScriptParserVisitor ) return ((TypeScriptParserVisitor<? extends T>)visitor).visitTs_variableDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Ts_variableDeclarationContext ts_variableDeclaration() throws RecognitionException {
		Ts_variableDeclarationContext _localctx = new Ts_variableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ts_variableDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LET) {
				{
				setState(114);
				match(LET);
				}
			}

			setState(117);
			match(IDENTIFIER);
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(118);
				match(COLON);
				setState(119);
				ts_typeWithBrackets();
				}
			}

			setState(122);
			match(EQ);
			setState(123);
			ts_value(0);
			setState(124);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Ts_arrayContext extends ParserRuleContext {
		public TerminalNode LBRACK() { return getToken(TypeScriptParser.LBRACK, 0); }
		public TerminalNode RBRACK() { return getToken(TypeScriptParser.RBRACK, 0); }
		public List<Ts_valueContext> ts_value() {
			return getRuleContexts(Ts_valueContext.class);
		}
		public Ts_valueContext ts_value(int i) {
			return getRuleContext(Ts_valueContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(TypeScriptParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(TypeScriptParser.COMMA, i);
		}
		public Ts_arrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ts_array; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScriptParserListener ) ((TypeScriptParserListener)listener).enterTs_array(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeScriptParserListener ) ((TypeScriptParserListener)listener).exitTs_array(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeScriptParserVisitor ) return ((TypeScriptParserVisitor<? extends T>)visitor).visitTs_array(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Ts_arrayContext ts_array() throws RecognitionException {
		Ts_arrayContext _localctx = new Ts_arrayContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_ts_array);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(LBRACK);
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 70187513856L) != 0)) {
				{
				setState(127);
				ts_value(0);
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(128);
					match(COMMA);
					setState(129);
					ts_value(0);
					}
					}
					setState(134);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}
